<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".info_Aalumnos">

    <androidx.gridlayout.widget.GridLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            app:layout_rowWeight="2"
            app:layout_rowSpan="2"
            app:layout_columnSpan="1"
            app:layout_columnWeight="0"
            android:src="@drawable/person_24"
            />



        <TextView
            android:id="@+id/Nombre"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="Reynaldo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="0">
        </TextView>
        <TextView

            android:id="@+id/grado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="7° sistemas computacionales"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="1"
            />

    </androidx.gridlayout.widget.GridLayout>


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="460dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/Materia"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/base_datos"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/ing_soft"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="@string/Calificacion"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/cal"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="8.5"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="9.8"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="9.1"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="3" />
    </androidx.gridlayout.widget.GridLayout>

</FrameLayout>