<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cash_info"
    tools:context=".cuentas">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="280dp">


        <Button
            android:id="@+id/licenciaturabtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:rotationX="17"
            android:rotationY="-25"
            android:text="@string/Licenciatura"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:cornerRadius="20dp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/doctoradobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:rotationX="17"
            android:rotationY="-25"
            android:text="@string/Maestría_________Doctorado"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:cornerRadius="20dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/posgradobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:rotationX="17"
            android:rotationY="-25"
            android:text="@string/Posgrado"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:cornerRadius="20dp"
            app:layout_column="0"
            app:layout_row="2"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="460dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="Nombre del alumno:"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="Fecha ùltimo pago:"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="Monto:"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:text="Adeudo:"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="Reynaldo León"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="09-nov-22"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="$1,500.00 MXN"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="Ninguno"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/backtrap4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:backgroundTint="#4743C5"
        android:text="@string/Regresar"
        app:cornerRadius="20dp"
        tools:ignore="TouchTargetSizeCheck"


        />

</FrameLayout>